<resources>
    <string name="app_name_icare_server">孝为先-服务者</string>
    <string name="message">消息</string>
    <string name="latest_server">最新服务</string>
    <string name="me">我</string>
    <string name="my_provided_server">我提供的服务</string>
    <string name="provide_service">提供服务</string>
    <string name="skip">跳过</string>
    <string name="exit_app">再按一次退出孝为先</string>
    <string name="service">服务</string>
    <string name="password">密码</string>
    <string name="auto_login">下次自动登陆</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="login">登陆</string>
    <string name="my_first_visit">我逛逛先</string>
    <string name="i_dont_have_account">我还没有账号</string>
    <string name="login_fail">系统繁忙，请稍后登陆...</string>
    <string name="loginName">手机号/邮箱</string>
    <string name="login_username_cannot_empty">用户名不能为空</string>
    <string name="login_password_cannot_empty">登陆密码不能空哦!</string>



    <integer-array name="google_colors">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/yellow</item>
        <item>@color/green</item>
    </integer-array>
    <integer name="default_type">0</integer>
</resources>
