<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimens_tab_menu_height"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_red_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMsg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/menu_msg_on"
            android:paddingBottom="6dp"
            android:paddingTop="10dp"
            android:text="@string/message"
            android:textColor="@color/material_grey_800"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@color/material_grey_300" />

        <Button
            android:id="@+id/btnService"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/menu_service_off"
            android:paddingBottom="6dp"
            android:paddingTop="10dp"
            android:text="@string/latest_server"
            android:textColor="@color/material_grey_800"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="@color/material_grey_300" />

        <Button
            android:id="@+id/btnMe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/menu_profile_off"
            android:paddingBottom="6dp"
            android:paddingTop="10dp"
            android:text="@string/me"
            android:textColor="@color/material_grey_800"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>