<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearMenu" />

    <LinearLayout
        android:id="@+id/linearMenu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_tab_menu_height"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/holo_red_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnMsg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableTop="@mipmap/menu_msg_on"
                    android:paddingBottom="6dp"
                    android:paddingTop="10dp"
                    android:text="@string/message"
                    android:textColor="@color/material_grey_800"
                    android:textSize="12sp" />
            </RelativeLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@color/material_grey_300" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableTop="@mipmap/menu_service_off"
                    android:paddingBottom="6dp"
                    android:paddingTop="10dp"
                    android:text="@string/service"
                    android:textColor="@color/material_grey_800"
                    android:textSize="12sp" />

            </RelativeLayout>

            <ImageView
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:background="@color/material_grey_300" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnMe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableTop="@mipmap/menu_profile_off"
                    android:paddingBottom="6dp"
                    android:paddingTop="10dp"
                    android:text="@string/me"
                    android:textColor="@color/material_grey_800"
                    android:textSize="12sp" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>